--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Easybank landing page</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+  <title>Easybank landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -16,7 +18,33 @@
 </head>
 <body>
 
-  Home
+  <header class="header">
+    <nav class="flex flex-jc-sb flex-ai-c">
+      <a href="/" class="header__logo">
+        <img src="images/logo.svg" alt="Easybank">
+      </a>
+      <a href="#" class="header__menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
+      <div class="header__links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Career</a>
+      </div>
+
+      <a href="#" class="button" header__cta>
+        Request Invite
+      </a>
+    </nav>
+    
+  </header>
+
+<!--
+Home
   About
   Contact
   Blog
@@ -92,10 +120,10 @@
   Request Invite
 
   © Easybank. All Rights Reserved
+-->
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  
+ 
+  <script src="/app/js/script.js"></script>
 </body>
 </html>
